--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
-Travis Whitton <whitton@atlantic.net>
-Ricardo Chimal, Jr. <ricardo@heroku.com>
-Martin Carpenter <mcarpenter@free.fr>
+= Ruby FileMagic Library Binding
+
+== AUTHORS
+
+* Travis Whitton        (whitton@atlantic.net)
+* Ricardo Chimal, Jr.   (ricardo@heroku.com)
+* Martin Carpenter      (mcarpenter@free.fr)
+
