--- a/TODO
+++ b/TODO
@@ -1,9 +1,14 @@
-o Find a better way to handle magic_load than just defaulting to NULL
-o Find a way to make magic_check work on NULL
-o Find a way to make magic_setflags work
-o Refactor code into initialize instead of new
-o Enable blocks for automatic cleanup:
+= Ruby FileMagic Library Binding
 
-FileMagic.open("somefile.txt") do |file|
-  # close is called at the end of this block
-end
+== TODO
+
+* Find a better way to handle magic_load than just defaulting to NULL
+* Find a way to make magic_check work on NULL
+* Find a way to make magic_setflags work
+* Refactor code into initialize instead of new
+* Enable blocks for automatic cleanup:
+
+    FileMagic.open("somefile.txt") do |file|
+      # close is called at the end of this block
+    end
+
